--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padiing: 0;
+  font-family: 'Lato', sans-serif;
+}
+
+.home {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
 .App {
   text-align: center;
 }
