--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,11 +1,15 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
+    // padding-right: 150px;
+    padding-top:60px
+}
+.header {
 }
 .container {
     width: var(--default-layout-width);
-    display: flex;
+    display: flex; 
 }   
 
 .content {
