--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,77 +1,94 @@
-.container-slider {
-    max-width: 700px;
-    height: 500px;
-    margin: 100px auto 0;
-    position: relative;
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+  
+  }
+  
+  /* Định dạng header */
+  .header {
+    background-color: #e9d8f4;
+    color: #58257b;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  /* Định dạng thanh điều hướng trên cùng */
+  .topnav {
     overflow: hidden;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
-  @media screen and (max-width: 700px){
-    .container-slider {
-      margin: 100px 10px 0;
-    }
-  }
-  .slide {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    opacity: 0;
-    transition: opacity ease-in-out 0.4s;
-  }
-  .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  .active-anim {
-    opacity: 1;
+    background-color: #58257b;
   }
   
-  .btn-slide {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: #f1f1f1;
-    border: 1px solid rgba(34, 34, 34, 0.287);
-    position: absolute;
+  /* Định dạng link điều hướng */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Thay đổi màu liên kết khi di chuột qua */
+  .topnav a:hover {
+    background-color: #db7093;
+    color: white;
+    font-weight: bold
+  }
+  
+  /* Tạo ba cột không bằng nhau, float cạnh nhau */
+  .column {
+    float: left;
+    padding: 10px;
+    height: 777px;
+    background-color: #ea8685;
+  }
+  
+  /* Cột bên trái và phải */
+  .column.side {
+    width: 70%;
+    background-color: #ea8685;
+  }
+  
+  /* Cột chính giữa */
+  .column.middle {
+    width: 25%;
+    /* width: 500px; */
+
+    background-color: #b33939;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    cursor: pointer;
+    justify-content: space-between;
+  }
+  .column.final {
+    /* width: 40%; */
+    width: 5%;
   }
   
-  .btn-slide img {
-    width: 25px;
-    height: 25px;
-    pointer-events: none;
-  }
-  .prev {
-    top: 50%;
-    left: 20px;
-    transform: translateY(-60%);
-  }
-  .next {
-    top: 50%;
-    right: 20px;
-    transform: translateY(-60%);
+  /* Clear float khác sau các cột */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
   }
   
+  /* Bố cục linh hoạt: ba cột xếp chồng lên nhau thay vì cạnh nhau khi màn hình 
+  có chiều rộng dưới 600px */
+  @media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+      width: 100%;
+  }
+  }
   
-  .container-dots {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-  }
-  .dot {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    border: 3px solid #f1f1f1;
-    margin: 0 5px;
-    background: #f1f1f1;
-  }
-  .dot.active {
-    background: rgb(32, 32, 32);
+  /* Định dạng footer */
+  .footer {
+    /* background-color: #e9d8f4; */
+    background-color: #40739E;
+    /* color: #58257b; */
+    color: #fff;
+    padding: 5px;
+    text-align: center;
   }
