--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -13,7 +13,8 @@
     position: fixed; 
     top: 0;
     left: 0;
-    background-color: #ffff;
+    // background-color: #ffff;
+    background-color: #ecf0f1;
 }
 
 .inner {
