--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right: 150px;
+    // padding-right: 150px;
     padding-top:100px
     // flex-flow: row wrap;
 }
@@ -13,9 +13,6 @@
     // flex-wrap: nowrap;
 }   
 
-.header {
-
-}
 
 .content {
     flex: 3 0px;
